commit on master

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="grid.css">
     <title>Redbeet Interactive</title>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
 </head>
 <video muted loop autoplay poster="poster.png" class="videobackground">
     <source src="headervideo.mp4" type="video/mp4"> </video>
-<span onclick="openNav()" class="openNav">&equiv;</span>
+<span onclick="openNav()" class="openNav"><i class="fas fa-angle-right"></i></span>
 
 <div id="main">
     <header class="header2">
@@ -19,7 +22,7 @@
     </header>
 
     <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-angle-left"></i></a>
         <a href="aboutus.html" class="aboutus">About us</a>
         <a href="jobs.html" class="Jobs">Jobs</a>
         <a href="contacts.html" class="Contacts">Contacts</a>
@@ -35,60 +38,65 @@
         stuff.</p>
             <div class="aboutus-grid">
                
-<div class="pers1">
+<div class="pers">
     <h2>Andre Bengtsson</h2>
     <p>Co-Founder & CEO <br> 3D & 2D Artist
     </p>
 </div>
-<div class="pers2">
+<div class="pers">
     <h2>Ellen Mellåker</h2>
     <p>Co-Founder<br> 3D Artist
     </p>
 </div>
-<div class="pers3">
+<div class="pers">
     <h2>Semih Parlayan</h2>
     <p>Co-Founder<br> Programmer
     </p>
 </div>
-<div class="pers4">
+<div class="pers">
     <h2>Gabriel Ajuwa</h2>
     <p>Programmer
     </p>
 </div>
-<div class="pers5">
+<div class="pers">
     <h2>Felicia Hellsten</h2>
     <p>3D Artist
     </p>
 </div>
-<div class="pers6">
+<div class="pers">
     <h2>Petter Boson</h2>
     <p>3D Artist
     </p>
 </div>
-<div class="pers7">
+<div class="pers">
     <h2>William Mayer</h2>
     <p>3D & 2D Artist
     </p>
 </div>
-<div class="pers8">
+<div class="pers">
     <h2>Ilayda Ertugrul</h2>
     <p>Community Manager
     </p>
 </div>
-            </div>
-    </main>
+</div>
+
+<div class="apply">
+    <a href="jobs.html"><p>Apply For Job <i class="fas fa-comments-dollar"></i></p></a>
+</div>
+</main>
 </div>
 <footer>
     <p>2020 © Redbeet Interactive</p>
     <ul>
-        <il><a href="https://discord.com/invite/raft"><img src="discord.png" alt="Discord"></a></il>
-        <il><a href="https://twitter.com/redbeetofficial"><img src="twitter.png" alt="twitter"></a></il>
-        <il><a href="https://www.facebook.com/RedbeetOfficial/"><img src="facebook.png" alt="facebook"></a></il>
-        <il><a href="https://www.youtube.com/channel/UCnVNBWWIcpwsrytqdruLTWA"><img src="youtube.png" alt="youtube"></a>
+        <il><a href="https://discord.com/invite/raft"><i class="fab fa-discord"></i></a></il>
+        <il><a href="https://twitter.com/redbeetofficial"><i class="fab fa-twitter"></i></a></il>
+        <il><a href="https://www.facebook.com/RedbeetOfficial/"><i class="fab fa-facebook-f"></i></a></il>
+        <il><a href="https://www.youtube.com/channel/UCnVNBWWIcpwsrytqdruLTWA"><i class="fab fa-youtube"></i></a>
         </il>
-        <il><a href="https://www.twitch.tv/redbeetinteractive"><img src="twitch.png" alt="twitch"></a></il>
+        <il><a href="https://www.twitch.tv/redbeetinteractive"><i class="fab fa-twitch"></i></a></il>
     </ul>
 </footer>
+
 
 
 </html>
