--- a/index.html
+++ b/index.html
@@ -54,16 +54,18 @@
 
 </main>
 </div>
-<footer> 
+<footer>
     <p>2020 © Redbeet Interactive</p>
     <ul>
-    <il><a href="https://discord.com/invite/raft"><img src="discord.png" alt="Discord"></a></il>
-    <il><a href="https://twitter.com/redbeetofficial"><img src="twitter.png" alt="twitter"></a></il>
-    <il><a href="https://www.facebook.com/RedbeetOfficial/"><img src="facebook.png" alt="facebook"></a></il>
-    <il><a href="https://www.youtube.com/channel/UCnVNBWWIcpwsrytqdruLTWA"><img src="youtube.png" alt="youtube"></a></il>
-    <il><a href="https://www.twitch.tv/redbeetinteractive"><img src="twitch.png" alt="twitch"></a></il>
-</ul>
+        <il><a href="https://discord.com/invite/raft"><i class="fab fa-discord"></i></a></il>
+        <il><a href="https://twitter.com/redbeetofficial"><i class="fab fa-twitter"></i></a></il>
+        <il><a href="https://www.facebook.com/RedbeetOfficial/"><i class="fab fa-facebook-f"></i></a></il>
+        <il><a href="https://www.youtube.com/channel/UCnVNBWWIcpwsrytqdruLTWA"><i class="fab fa-youtube"></i></a>
+        </il>
+        <il><a href="https://www.twitch.tv/redbeetinteractive"><i class="fab fa-twitch"></i></a></il>
+    </ul>
 </footer>
+
 
 
 </html>
