commit on master

--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
 </head>
 <video muted loop autoplay poster="poster.png" class="videobackground">
     <source src="headervideo.mp4" type="video/mp4"> </video>
-<span onclick="openNav()" class="openNav"><i class="fas fa-angle-right"></i></span>
+<a href="javascript:void(0)" onclick="openNav()" class="openNav"><i class="fas fa-angle-right"></i></a>
 
 <div id="main">
     <header class="header2">
