--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,7 @@
 </head>
 <video muted loop autoplay poster="poster.png" class="videobackground">
     <source src="headervideo.mp4" type="video/mp4"> </video>
-<span onclick="openNav()" class="openNav"><i class="fas fa-angle-right"></i></span>
+<a href="javascript:void(0)" onclick="openNav()" class="openNav"><i class="fas fa-angle-right"></i></a>
 
 <div id="main">
     <header class="header2">
@@ -39,7 +39,14 @@
                class="map" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                 tabindex="0" ></iframe></div>
                 <div class="contact"><h3>Contact Us!</h3><a href="mailto:contact@redbeetinteractive.com">contact@redbeetinteractive.com</a></div>
-                <div class="contact"><h3>Follow Us!</h3><h4>Redbeet Interactive</h4><a href="https://www.twitch.tv/redbeetinteractive"><i class="fab fa-twitch"></i></a>    <a href="https://www.youtube.com/channel/UCnVNBWWIcpwsrytqdruLTWA"><i class="fab fa-youtube"></i></a><a href="https://www.facebook.com/RedbeetOfficial/"><i class="fab fa-facebook-f"></i></a><a href="https://discord.com/invite/raft"><i class="fab fa-discord"></i></a><a href="https://twitter.com/redbeetofficial"><i class="fab fa-twitter"></i></a> <br> <h4></h4></div>
+                <div class="contact"><h3>Follow Us!</h3><h4>Redbeet Interactive</h4><a href="https://www.twitch.tv/redbeetinteractive"><i class="fab fa-twitch"></i></a>    <a href="https://www.youtube.com/channel/UCnVNBWWIcpwsrytqdruLTWA"><i class="fab fa-youtube"></i></a><a href="https://www.facebook.com/RedbeetOfficial/"><i class="fab fa-facebook-f"></i></a><a href="https://discord.com/invite/raft"><i class="fab fa-discord"></i></a><a href="https://twitter.com/redbeetofficial"><i class="fab fa-twitter"></i></a> <br> <h4>Raft</h4><a href="https://www.twitch.tv/redbeetinteractive"><i class="fab fa-twitch"></i></a> <a
+                    href="https://www.youtube.com/channel/UCnVNBWWIcpwsrytqdruLTWA"><i class="fab fa-youtube"></i></a><a
+                    href="https://www.facebook.com/RedbeetOfficial/"><i class="fab fa-facebook-f"></i></a><a
+                    href="https://discord.com/invite/raft"><i class="fab fa-discord"></i></a><a
+                    href="https://twitter.com/redbeetofficial"><i class="fab fa-twitter"></i></a></div>
+                <div class="contact">
+                    <h3>Game Support</h3><a class="help-center" href="https://support.redbeetinteractive.com/hc/en-us/">Help Center</a>
+                </div>
 
 
         </div>
