--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <video muted loop autoplay poster="poster.png" class="videobackground">
     <source src="headervideo.mp4" type="video/mp4"> </video>
-    <span onclick="openNav()" class="openNav"><i class="fas fa-angle-right"></i></span>
+    <a href="javascript:void(0)" onclick="openNav()" class="openNav"><i class="fas fa-angle-right"></i></a>
 
 <div id="main">
 <header class="header">
@@ -31,7 +31,7 @@
 
     
 
-    
+
 <main>
     <h2>Welcome!</h2>
     <p>Redbeet Interactive is a small game studio founded in 2017. We are currently developing Raft, a game where your mission
@@ -53,6 +53,7 @@
 
 
 </main>
+
 </div>
 <footer>
     <p>2020 © Redbeet Interactive</p>
