--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,7 @@
 </head>
 <video muted loop autoplay poster="poster.png" class="videobackground">
     <source src="headervideo.mp4" type="video/mp4"> </video>
-<a href="javascript:void(0)" onclick="openNav()" class="openNav"><i class="fas fa-angle-right"></i></a>
+<a href="javascript:void(0)" onclick="openNav()" class="openNav"><i class="fas fa-bars"></i></a>
 
 <div id="main">
     <header class="header2">
@@ -22,7 +22,7 @@
     </header>
 
     <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-angle-left"></i></a>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-minus"></i></a>
         <a href="aboutus.html" class="aboutus">About us</a>
         <a href="jobs.html" class="Jobs">Jobs</a>
         <a href="contacts.html" class="Contacts">Contacts</a>
@@ -35,9 +35,9 @@
     <main>
         <div class="contact-grid">
             <div class="contact"><h3>Visit Us!</h3><p>Vasagatan 29 <br> 541 31 Skövde <br> Sweden <br></p><iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2091.423765241599!2d13.834648915939237!3d58.386254381338844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465b0247608d46af%3A0x8396e05954864cb0!2sVasagatan%2029%2C%20541%2031%20Sk%C3%B6vde!5e0!3m2!1ssv!2sse!4v1605014185458!5m2!1ssv!2sse"
-               class="map" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                tabindex="0" ></iframe></div>
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2091.423765241599!2d13.834648915939237!3d58.386254381338844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ssv!2sse!4v1605186500086!5m2!1ssv!2sse"
+                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                tabindex="0" class="map"></iframe></div>
                 <div class="contact"><h3>Contact Us!</h3><a href="mailto:contact@redbeetinteractive.com">contact@redbeetinteractive.com</a></div>
                 <div class="contact"><h3>Follow Us!</h3><h4>Redbeet Interactive</h4><a href="https://www.twitch.tv/redbeetinteractive"><i class="fab fa-twitch"></i></a>    <a href="https://www.youtube.com/channel/UCnVNBWWIcpwsrytqdruLTWA"><i class="fab fa-youtube"></i></a><a href="https://www.facebook.com/RedbeetOfficial/"><i class="fab fa-facebook-f"></i></a><a href="https://discord.com/invite/raft"><i class="fab fa-discord"></i></a><a href="https://twitter.com/redbeetofficial"><i class="fab fa-twitter"></i></a> <br> <h4>Raft</h4><a href="https://www.twitch.tv/redbeetinteractive"><i class="fab fa-twitch"></i></a> <a
                     href="https://www.youtube.com/channel/UCnVNBWWIcpwsrytqdruLTWA"><i class="fab fa-youtube"></i></a><a
