--- a/jobs.html
+++ b/jobs.html
@@ -13,7 +13,7 @@
 </head>
 <video muted loop autoplay poster="poster.png" class="videobackground">
     <source src="headervideo.mp4" type="video/mp4"> </video>
-<a href="javascript:void(0)" onclick="openNav()" class="openNav"><i class="fas fa-angle-right"></i></a>
+<a href="javascript:void(0)" onclick="openNav()" class="openNav"><i class="fas fa-bars"></i></a>
 
 <div id="main">
     <header class="header2">
@@ -22,7 +22,7 @@
     </header>
 
     <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-angle-left"></i></a>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fas fa-minus"></i></a>
         <a href="aboutus.html" class="aboutus">About us</a>
         <a href="jobs.html" class="Jobs">Jobs</a>
         <a href="contacts.html" class="Contacts">Contacts</a>
