--- a/contacts.html
+++ b/contacts.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
+        <link rel="icon" sizes="300x300" href="icon.ico">
 </head>
-<video muted loop autoplay poster="poster.png" class="videobackground">
-    <source src="headervideo.mp4" type="video/mp4"> </video>
+<img class="videobackground" src="contact.png" alt="">
 <a href="javascript:void(0)" onclick="openNav()" class="openNav"><i class="fas fa-bars"></i></a>
 
 <div id="main">
-    <header class="header2">
+    <header class="header3">
 
         <h1><a href="index.html"><img src="logo.png" alt="logo"></a></h1>
     </header>
